# dl16-cli

./: .gitignore  README.md  pyproject.toml
atkdl16_cli/: __init__.py  acquisition.py  capture.py  cli.py  device.py  errors.py  export.py  filtering.py  firmware.py  protocol.py  pwm.py  sampling.py  session.py  sigrok.py  storage.py  streaming.py  trigger.py  usb.py
dl16_cli/: __init__.py  acquisition.py  cli.py  decoders.py  device.py  errors.py  filtering.py  measure.py  pwm.py  sampling.py  search.py  session.py  sigrok.py  storage.py  streaming.py  trigger.py  usb.py
docs/: acceptance-2026-07-15.md  acceptance-2026-07-18.md
docs/protocol/: evidence-summary.md  protocol.md
docs/superpowers/plans/: 2026-07-09-atk-dl16-protocol-core-pwm.md  2026-07-09-atk-dl16-raw-commands.md  2026-07-09-atk-dl16-usb-backend.md  2026-07-09-dl16-protocol-core-pwm.md  2026-07-09-dl16-raw-commands.md  2026-07-09-dl16-usb-backend.md  2026-07-10-atk-dl16-sampling-parameters.md  2026-07-10-atk-dl16-trigger-builders.md  2026-07-10-dl16-capture-packet-parser.md  2026-07-10-dl16-firmware-protocol.md  2026-07-10-dl16-sampling-parameters.md  (+1 more)
examples/: serial-trigger.json  stage-trigger.json
skills/dl16-cli/: SKILL.md
tests/: test_capture.py  test_cli.py  test_decoders.py  test_device.py  test_export.py  test_filtering.py  test_firmware.py  test_imports.py  test_measure.py  test_protocol.py  test_pwm.py  test_sampling.py  test_search.py  test_session.py  test_sigrok.py  test_streaming.py  test_trigger.py  test_usb_backend.py
udev/: 99-atk-dl16.rules  99-dl16.rules
(+2 files in other folders)
