[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atkdl16-cli"
version = "0.1.0"
description = "Command-line reverse-engineered control utility for ATK DL16 logic analyzer"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
atkdl16 = "atkdl16_cli.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
