[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dl16-cli"
version = "0.1.0"
description = "Command-line reverse-engineered control utility for DL16 logic analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
usb = ["pyusb>=1.2"]

[project.scripts]
dl16 = "dl16_cli.cli:main"

[tool.setuptools]
packages = ["dl16_cli"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
